k8s/broker-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker-service
  template:
    metadata:
      labels:
        app: broker-service
    spec:
      containers:
        - name: broker-service
          image: 'eduardylopes/broker-service:1.0.0'
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: '256Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '200m'

---
apiVersion: v1
kind: Service
metadata:
  name: broker-service
spec:
  selector:
    app: broker-service
  ports:
    - protocol: TCP
      name: web-port
      port: 8080
      targetPort: 80
